k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-otel-api-service
  namespace: default
  labels:
    app: go-otel-api
spec:
  type: ClusterIP
  selector:
    app: go-otel-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
